--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
      "description": "",
      "main": "index.js",
      "scripts": {
-          "dev": "next"
+          "dev": "next",
+          "build": "now-build"
      },
      "repository": {
           "type": "git",
